<?xml version="1.0" encoding="UTF-8"?>
<project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd" xmlns="http://maven.apache.org/POM/4.0.0"
    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
  <modelVersion>4.0.0</modelVersion>
  <groupId>org.apache.wss4j</groupId>
  <artifactId>wss4j</artifactId>
  <version>2.4.1-jbossorg-1</version>
  <packaging>pom</packaging>
  <name>Apache WSS4J</name>
  <description>The Apache WSS4J project provides a Java implementation of the primary security standards 
        for Web Services, namely the OASIS Web Services Security (WS-Security) specifications 
        from the OASIS Web Services Security TC.</description>
  <url>https://ws.apache.org/wss4j/</url>
  <inceptionYear>2004</inceptionYear>
  <organization>
    <name>The Apache Software Foundation</name>
    <url>https://www.apache.org/</url>
  </organization>
  <licenses>
    <license>
      <name>Apache License, Version 2.0</name>
      <url>https://www.apache.org/licenses/LICENSE-2.0.txt</url>
      <distribution>repo</distribution>
    </license>
  </licenses>
  <developers>
    <developer>
      <name>The Apache WSS4J Team</name>
      <email>wss4j-dev@ws.apache.org</email>
      <url>https://ws.apache.org/wss4j</url>
      <organization>Apache Software Foundation</organization>
      <organizationUrl>https://apache.org/</organizationUrl>
    </developer>
  </developers>
  <mailingLists>
    <mailingList>
      <name>Apache Web Services Developer List</name>
      <subscribe>dev-subscribe@ws.apache.org</subscribe>
      <unsubscribe>dev-unsubscribe@ws.apache.org</unsubscribe>
      <post>dev@ws.apache.org</post>
      <archive>https://lists.apache.org/list.html?dev@ws.apache.org</archive>
    </mailingList>
    <mailingList>
      <name>Apache Web Services Users List</name>
      <subscribe>users-subscribe@ws.apache.org</subscribe>
      <unsubscribe>users-unsubscribe@ws.apache.org</unsubscribe>
      <post>users@ws.apache.org</post>
      <archive>https://lists.apache.org/list.html?users@ws.apache.org</archive>
    </mailingList>
    <mailingList>
      <name>Apache Web Services Commits List</name>
      <subscribe>commits-subscribe@ws.apache.org</subscribe>
      <unsubscribe>commits-unsubscribe@ws.apache.org</unsubscribe>
      <archive>https://lists.apache.org/list.html?commits@ws.apache.org</archive>
    </mailingList>
  </mailingLists>
  <modules>
    <module>parent</module>
    <module>bindings</module>
    <module>policy</module>
    <module>ws-security-common</module>
    <module>ws-security-dom</module>
    <module>ws-security-stax</module>
    <module>ws-security-web</module>
    <module>integration</module>
    <module>ws-security-policy-stax</module>
  </modules>
  <scm>
    <connection>scm:git:https://github.com/jboss/ws-wss4j.git</connection>
    <developerConnection>scm:git:https://github.com/jboss/ws-wss4j.git</developerConnection>
    <tag>wss4j-2.4.1-jbossorg-1</tag>
  </scm>
  <issueManagement>
    <system>JIRA</system>
    <url>https://issues.apache.org/jira/browse/WSS</url>
  </issueManagement>
  <distributionManagement>
    <repository>
      <id>jboss-releases-repository</id>
      <name>JBoss Releases Repository</name>
      <url>https://repository.jboss.org/nexus/service/local/staging/deploy/maven2/</url>
    </repository>
    <snapshotRepository>
      <id>jboss-snapshots-repository</id>
      <name>JBoss Snapshots Repository</name>
      <url>https://repository.jboss.org/nexus/content/repositories/snapshots/</url>
    </snapshotRepository>
  </distributionManagement>
  <properties>
    <targetJdk>11</targetJdk>
    <maven.compiler.target>11</maven.compiler.target>
    <maven-owasp-plugin-version>6.5.3</maven-owasp-plugin-version>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <project.build.outputTimestamp>${maven.build.timestamp}</project.build.outputTimestamp>
    <buildtools.dir>${basedir}/build-tools</buildtools.dir>
  </properties>
  <repositories>
    <repository>
      <releases>
        <enabled>true</enabled>
      </releases>
      <snapshots>
        <enabled>true</enabled>
      </snapshots>
      <id>A_maven.central</id>
      <name>Maven Central</name>
      <url>https://repo1.maven.org/maven2/</url>
    </repository>
    <repository>
      <releases>
        <enabled>true</enabled>
      </releases>
      <id>B_shibboleth</id>
      <name>OpenSAML</name>
      <url>https://build.shibboleth.net/nexus/content/groups/public</url>
    </repository>
  </repositories>
  <build>
    <defaultGoal>install</defaultGoal>
    <pluginManagement>
      <plugins>
        <plugin>
          <groupId>org.apache.felix</groupId>
          <artifactId>maven-bundle-plugin</artifactId>
          <version>5.1.4</version>
        </plugin>
        <plugin>
          <artifactId>maven-compiler-plugin</artifactId>
          <version>3.8.1</version>
          <configuration>
            <source>${targetJdk}</source>
            <target>${targetJdk}</target>
            <compilerArgs>
              <arg>-XDcompilePolicy=simple</arg>
            </compilerArgs>
            <annotationProcessorPaths>
              <path>
                <groupId>com.google.errorprone</groupId>
                <artifactId>error_prone_core</artifactId>
                <version>2.3.2</version>
              </path>
            </annotationProcessorPaths>
          </configuration>
        </plugin>
        <plugin>
          <artifactId>maven-javadoc-plugin</artifactId>
          <version>3.3.0</version>
          <executions>
            <execution>
              <goals>
                <goal>jar</goal>
              </goals>
            </execution>
          </executions>
          <configuration>
            <attach>true</attach>
            <additionalJOptions>
              <additionalJOption>-Xdoclint:none</additionalJOption>
            </additionalJOptions>
            <notimestamp>true</notimestamp>
          </configuration>
        </plugin>
        <plugin>
          <artifactId>maven-site-plugin</artifactId>
          <version>3.6</version>
          <dependencies>
            <dependency>
              <groupId>org.asciidoctor</groupId>
              <artifactId>asciidoctor-maven-plugin</artifactId>
              <version>2.1.0</version>
            </dependency>
          </dependencies>
        </plugin>
        <plugin>
          <groupId>org.owasp</groupId>
          <artifactId>dependency-check-maven</artifactId>
          <version>${maven-owasp-plugin-version}</version>
          <executions>
            <execution>
              <phase>validate</phase>
              <goals>
                <goal>check</goal>
              </goals>
            </execution>
          </executions>
        </plugin>
        <plugin>
          <artifactId>maven-enforcer-plugin</artifactId>
          <version>3.0.0</version>
          <configuration>
            <rules>
              <requireMavenVersion>
                <version>3.5</version>
              </requireMavenVersion>
            </rules>
          </configuration>
        </plugin>
      </plugins>
    </pluginManagement>
    <plugins>
      <plugin>
        <artifactId>maven-pmd-plugin</artifactId>
        <version>3.7</version>
        <executions>
          <execution>
            <id>validate</id>
            <phase>validate</phase>
            <goals>
              <goal>check</goal>
            </goals>
          </execution>
        </executions>
        <configuration>
          <rulesets>
            <ruleset>${buildtools.dir}/wss4j-pmd-ruleset.xml</ruleset>
          </rulesets>
          <sourceEncoding>UTF-8</sourceEncoding>
          <failOnViolation>true</failOnViolation>
          <linkXRef>false</linkXRef>
          <verbose>true</verbose>
          <includeTests>true</includeTests>
          <targetJdk>1.8</targetJdk>
          <excludeRoots>
            <excludeRoot>${basedir}/src/main/generated</excludeRoot>
          </excludeRoots>
        </configuration>
      </plugin>
      <plugin>
        <artifactId>maven-checkstyle-plugin</artifactId>
        <version>3.1.2</version>
        <executions>
          <execution>
            <id>validate</id>
            <phase>validate</phase>
            <goals>
              <goal>check</goal>
            </goals>
          </execution>
        </executions>
        <dependencies>
          <dependency>
            <groupId>com.puppycrawl.tools</groupId>
            <artifactId>checkstyle</artifactId>
            <version>8.35</version>
          </dependency>
        </dependencies>
        <configuration>
          <configLocation>${buildtools.dir}/wss4j-checkstyle.xml</configLocation>
          <includeTestSourceDirectory>false</includeTestSourceDirectory>
          <includeTestResources>false</includeTestResources>
          <encoding>UTF-8</encoding>
          <failOnViolation>true</failOnViolation>
        </configuration>
      </plugin>
      <plugin>
        <artifactId>maven-source-plugin</artifactId>
        <executions>
          <execution>
            <goals>
              <goal>jar</goal>
            </goals>
          </execution>
        </executions>
        <configuration>
          <attach>true</attach>
        </configuration>
      </plugin>
      <plugin>
        <artifactId>maven-release-plugin</artifactId>
        <configuration>
          <useReleaseProfile>false</useReleaseProfile>
          <preparationGoals>clean install</preparationGoals>
          <goals>deploy</goals>
          <arguments>-Papache-release</arguments>
          <autoVersionSubmodules>true</autoVersionSubmodules>
        </configuration>
      </plugin>
    </plugins>
  </build>
  <reporting>
    <plugins>
      <plugin>
        <artifactId>maven-project-info-reports-plugin</artifactId>
        <version>2.9</version>
        <reportSets>
          <reportSet>
            <reports>
              <report>issue-tracking</report>
              <report>license</report>
              <report>mailing-list</report>
              <report>scm</report>
            </reports>
          </reportSet>
        </reportSets>
      </plugin>
      <plugin>
        <artifactId>maven-javadoc-plugin</artifactId>
        <version>3.2.0</version>
      </plugin>
      <plugin>
        <artifactId>maven-jxr-plugin</artifactId>
        <version>2.5</version>
      </plugin>
      <plugin>
        <groupId>org.owasp</groupId>
        <artifactId>dependency-check-maven</artifactId>
        <version>${maven-owasp-plugin-version}</version>
      </plugin>
    </plugins>
  </reporting>
  <profiles>
    <profile>
      <id>fastinstall</id>
      <properties>
        <checkstyle.skip>true</checkstyle.skip>
        <maven.test.skip>true</maven.test.skip>
        <pmd.skip>true</pmd.skip>
      </properties>
    </profile>
    <profile>
      <id>nochecks</id>
      <properties>
        <checkstyle.skip>true</checkstyle.skip>
        <pmd.skip>true</pmd.skip>
      </properties>
    </profile>
    <profile>
      <id>jdk19-plus</id>
      <activation>
        <jdk>[9,)</jdk>
      </activation>
      <build>
        <pluginManagement>
          <plugins>
            <plugin>
              <artifactId>maven-surefire-plugin</artifactId>
              <version>2.22.2</version>
              <configuration>
                <reportFormat>brief</reportFormat>
                <useFile>false</useFile>
                <childDelegation>false</childDelegation>
                <includes>
                  <include>**/*Test.java</include>
                </includes>
                <argLine>-Xmx2000m --add-opens java.base/java.lang.reflect=ALL-UNNAMED</argLine>
                <systemPropertyVariables>
                  <java.io.tmpdir>${basedir}/target</java.io.tmpdir>
                </systemPropertyVariables>
              </configuration>
            </plugin>
          </plugins>
        </pluginManagement>
      </build>
    </profile>
    <profile>
      <id>activate-buildtools-in-module</id>
      <activation>
        <file>
          <exists>${basedir}/../build-tools/wss4j-checkstyle.xml</exists>
        </file>
      </activation>
      <properties>
        <buildtools.dir>${basedir}/../build-tools</buildtools.dir>
      </properties>
    </profile>
    <profile>
      <id>activate-buildtools-in-submodule</id>
      <activation>
        <file>
          <exists>${basedir}/../../build-tools/wss4j-checkstyle.xml</exists>
        </file>
      </activation>
      <properties>
        <buildtools.dir>${basedir}/../../build-tools</buildtools.dir>
      </properties>
    </profile>
    <profile>
      <id>dependencycheck</id>
      <build>
        <plugins>
          <plugin>
            <groupId>org.owasp</groupId>
            <artifactId>dependency-check-maven</artifactId>
          </plugin>
        </plugins>
      </build>
    </profile>
  </profiles>
</project>
